<resources>
    <!-- General -->
    <string name="app_name">Pocket Traveler</string>
    <string name="home">Home</string>
    <string name="holidays">Holidays</string>
    <string name="places">Places</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="button_view">VIEW</string>
    <string name="button_edit">EDIT</string>
    <string name="from">From</string>
    <string name="to">To</string>

    <!-- Holiday -->
    <string name="title">Trip to San Diego 2017</string>
    <string name="date">October 2017</string>
    <string name="notes">I don\'t want to talk about it</string>
    <string name="label_title">Title</string>
    <string name="label_start">Start date</string>
    <string name="label_end">End date</string>
    <string name="label_photos">Photos</string>
    <string name="label_notes">Notes</string>
    <string name="tap_to_edit">Tap to edit</string>

    <!-- Actions -->
    <string name="action_share">Share</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_delete">Delete</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_holiday">Holidays</string>
    <string name="title_activity_places">Places</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appearance">Appearance</string>
    <string name="about">About</string>
    <string name="tap_to_add_photos">Tap to add photos</string>
</resources>
