<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_feedback_black_24dp"
        android:orderInCategory="200"
        android:title="@string/action_feedback"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"
        android:orderInCategory="300"
        android:title="@string/action_help"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="400"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
